feat: enhance CORS configuration and improve KeepAliveService initialization